fix: adjust link, delete gap:24px since there is space-between for medium and large screen

--- a/src/components/Community/Community.css
+++ b/src/components/Community/Community.css
@@ -117,7 +117,6 @@
   .community__cardlist {
     margin: 39px 0 0 0;
     width: 100%;
-    gap: 24x;
   }
 
   .community__container {
