--- a/src/components/CommunityCard/CommunityCard.css
+++ b/src/components/CommunityCard/CommunityCard.css
@@ -3,6 +3,7 @@
   width: 126px;
   height: 70px;
   padding: 12px 0 0 12px;
+  margin: 0;
   background-color: #212d45;
   border-radius: 12px;
 }
